# OBP-MCP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  ai_env  docker-compose.yml  main.py  pyproject.toml  run_server.sh
.github/workflows/: build_container_main_branch_themed.yml
database/: config.py  data_hash_manager.py  endpoint_index.json  endpoint_schemas.json  glossary_index.json  obp_utils.py  populate_vector_db.py  startup_updater.py
docs/: AUTH_SETUP.md  HYBRID_ROUTING.md  KEYCLOAK_SETUP.md
scripts/: generate_endpoint_index.py  generate_glossary_index.py  populate_database.sh
src/client/: client.py
src/mcp_server_obp/: auth.py  elicitation.py  headers.py  lifespan.py  server.py  status.py
src/temp/: keycloak.py
src/tools/: __init__.py  endpoint_index.py  glossary_index.py
src/tools/retrieval/: __init__.py  retriever_config.py
src/tools/retrieval/endpoint_retrieval/: endpoint_retrieval_graph.py
src/tools/retrieval/endpoint_retrieval/components/: chains.py  nodes.py  states.py
src/tools/retrieval/glossary_retrieval/: glossary_retrieval_graph.py
src/tools/retrieval/glossary_retrieval/components/: nodes.py  states.py
src/utils/: __init__.py
src/utils/formatters/: __init__.py  endpoint_formatter.py  glossary_formatter.py
tests/: __init__.py  conftest.py  test_auth.py  test_endpoint_index.py
