[project]
name = "obp-mcp"
version = "0.1.0"
description = "An MCP Server for the Open Bank Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.0.7",
    "mcp[cli]>=1.21.2",
    "requests>=2.32.5",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
]
