[project]
name = "obp-mcp"
version = "0.1.0"
description = "An MCP Server for the Open Bank Project"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastmcp>=2.14.1",
    "mcp[cli]>=1.21.2",
    "requests>=2.32.5",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
    "watchfiles>=1.0.3",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
